[metadata]
version = file: scoli_meter/VERSION

[aliases]
test=pytest

[tool:pytest]
addopts = --junitxml xunit-results.xml --cov-report term --cov-report xml --cov=scoli_meter tests
junit_family=xunit1
filterwarnings =
    ignore:.*[dns|Using or importing.*is deprecated].*:DeprecationWarning
    ignore:.*Conversion of the second argument of.*
    ignore:.*invalid value encountered in true_divide*
    ignore:.*semaphore_tracker.*


[flake8]
max-line-length = 120
per-file-ignores =
    scoli_meter/pointnet/pointnet_segmentation.py:E402
